# ark

./: .dockerignore  .envrc.sh  .gitignore  Cargo.toml  README.md  build.sh  debian-up.sh  deploy.docker-compose.yml  diesel.toml  docker-compose.yaml  docker-compose.yml  runlocal.sh
api/: Cargo.toml  Dockerfile  Dockerfile.release  README.md  deploy.Dockerfile  docker-entrypoint.sh  micro.Dockerfile  pytest.ini  requirements.txt  runlocal.sh  runtests.sh  setup.json  setup.py
api/api/: main.py  models.py  svn.py
api/api/endpoints/: ark.py  ark_files.py  export.py  health.py  index.py
api/req/: install.txt
api/src/: api.rs  main.rs
api/src/api/: health.rs  mod.rs
api/tests/: conftest.py
api/tests/api/: test_ark_files.py  test_ark_index.py  test_export.py  test_health.py
apipy/: Dockerfile  README.md  requirements.txt  runtests.sh  setup.json  setup.py
apipy/api/: __main__.py  main.py  models.py  process.py  responses.py  svn.py
apipy/api/endpoints/: ark.py  ark_files.py  health.py  index.py
apipy/req/: dev.txt  install.txt
apipy/svntemplate/hooks/: pre-revprop-change
apipy/tests/: conftest.py  test_api_index.py
apipy/tests/api/: helpers.py  test_ark_files.py  test_ark_index.py
app/: Dockerfile
ark/: Cargo.toml  Dockerfile  README.md  deploy.Dockerfile  docker-entrypoint.sh  main.rs  pytest.ini  runtests.sh  schema.rs  setup.json
ark-s3/: Cargo.toml
ark-s3/src/: bucket.rs  client.rs  lib.rs  main.rs  object.rs  upload.rs
ark-ui/: README.md  package-lock.json  package.json
ark/api/: __init__.py  main.py  models.py  process.py  svn.py  types.py
ark/api/endpoints/: ark.py  ark_files.py  export.py  health.py  index.py
ark/db/: models.py
ark/fixtures/: 0_mimetype.py  1_json_fixtures.py
ark/fixtures/data/: 0-account.json  _mime.types
ark/migrations/2020-10-24-192242_init/: up.sql
ark/migrations/2020-10-24-192303_projects/: up.sql
ark/migrations/20240316140020_gen_id/: down.sql
ark/migrations/20240316140848_account/: up.sql
ark/migrations/20240316141139_project/: down.sql  up.sql
ark/migrations/20240316141837_version/: down.sql  up.sql
ark/migrations/20240316155226_content/: down.sql  up.sql
ark/reports/coverage/: api___init___py.html  api_endpoints_ark_files_py.html  api_endpoints_ark_py.html  api_endpoints_export_py.html  api_endpoints_health_py.html  api_endpoints_index_py.html  api_main_py.html  api_models_py.html  api_process_py.html  api_responses_py.html  api_svn_py.html  index.html  status.json
ark/req/: dev.txt
ark/routes/: accounts.rs
ark/script/: mig-gen.sh
ark/services/: s3.rs
ark/src/: db.rs  errors.rs  main.rs  models.rs  routes.rs  schema.rs
ark/src/models/: account.rs  content.rs  file.rs  version.rs
ark/src/routes/: accounts.rs  files.rs  versions.rs
ark/tests/: conftest.py
ark/tests/api/: __init__.py  helpers.py  test_ark_files.py  test_ark_index.py  test_health.py
db/: Cargo.toml  Dockerfile
db/docker-entrypoint-initdb.d/: cp-postgresql-conf.sh
db/migrations/2020-10-24-192242_init/: down.sql  up.sql
deploy/: build.sh
docs/: Performance-Rust-vs-Python.md  config.toml
docs/content/: Multitenancy-and-Identity.md
docs/plan/: ark-v1.md  content.md  queue.md  users-authnz.md
docs/plan/archive/: workflow.md
migrations/20240316140020_big_id/: down.sql  up.sql
migrations/20240316140020_gen_id/: up.sql
migrations/20240316140848_account/: up.sql
migrations/20240316141837_version/: up.sql
migrations/20240316153350_mimetype/: down.sql  up.sql
migrations/20240316155226_content/: down.sql  up.sql
migrations/20240330231811_file/: down.sql  up.sql
migrations/20240330231811_file_version/: down.sql  up.sql
plan/: _index.md  files.md  projects.md  users-auth.md
script/: mig-run.sh  mzero.sh
svn/: Dockerfile  setup.json  setup.py
svn/conf/: default-svn.conf
svn/req/: install.txt
svn/svn/: admin.py  process.py  svn.py  types.py
svn/svnadmin/: __init__.py  api.py  app.py  process.py  svn.py  types.py
ui/: Dockerfile  default.conf  deploy.Dockerfile  package-lock.json  package.json  runlocal.sh  tailwind.config.js  webpack.config.js  webpack.dev.js
ui/nginx/: default.conf
ui/public/: index.html
ui/src/: archives.js  directory.js  error.js  history-panel.js  history.js  icons.js  index.js  lib.js  main.css  modal.js  path.js
(+4 files in other folders)
