[package]
name = "ark"
version = "0.1.0"
authors = ["Sean Harrison <sah@kruxia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
futures = "0.3"
listenfd = "0.3"
reqwest = "0.10"
serde = "1.0"
sqlx = { version = "0.3", default-features = false, features = [ "macros", "runtime-tokio", "postgres" ] }
