[package]
name = "ark-api"
version = "0.0.2"
authors = ["Sean Harrison <sah@kruxia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
futures = "0.3"
listenfd = "0.3"
reqwest = "0.10"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "postgres" ] }
