[package]
name = "ark-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.9" }
aws-sdk-s3 = { version = "1.21.0" }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v7"] }
