[package]
name = "ark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-s3 = { path = "../ark-s3" }
aws-config = { version = "1.1.9" }
aws-sdk-s3 = { version = "1.21.0" }
axum = { version = "0.7.5", features = ["macros", "multipart"] }
chrono = { version = "0.4.37", features = ["clock", "serde"] }
rand = "0.8.5"
bb8 = "0.8.3"
diesel = { version = "2.1.5", features = [
    "postgres",
    "uuid",
    "chrono",
    "serde_json",
] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["serde", "v4", "v7"] }
